--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+
+
+}
+.CounterArea {
+  position: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 100px;
+  border-radius: 10px;
+  width: 400px;
+  height: 300px;
+  border: 2px solid chocolate;
+  background: moccasin;
 }
 
-.App-link {
-  color: #61dafb;
+.buttonarea {
+  border-radius: 10px;
+  border: 2px solid chocolate;
+  margin: 15px 20px 10px 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputarea {
+  border-radius: 10px;
+  border: 2px solid chocolate;
+  margin: 10px 20px 10px 20px;
 }
